kubernetes/sonarr/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: movies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      restartPolicy: Always
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media
              mountPath: /media
          ports:
            - containerPort: 8989
      volumes:
        - name: sonarr-config
          hostPath:
            path: /home/thelegend27/homeserver/movies/sonarr/config
        - name: sonarr-media
          hostPath:
            path: /mnt/media
