kubernetes/sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: movies
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - port: 8989
      name: http
